Development
    Enable Copy URL menu, since we are in string freeze, I will not update this text until next release
    Add missing schema key
    Updated ko, fr and tr translations
    Updated Polish translation
    Set Left alignment in Playlist for Artist column
    Allow drag and drop of folders to main window and playlist and show status properly
    Add in progress status when adding folder
    Add ability to pass in directory on commandline, may take a second or two to load
    Make the minimum value of cache size to be 32, mplayer will crash with values less than 32
    Get rid of message level warning in config file
    Updated Polish translation
	Add --keep_on_top command line option and add preference to advanced page (this page needs some work)
    Fix minor memory leak in sid and aid menu generation code
    Cleanup some more seconds_to_string code
    Show chapters in file details when > 0
    Don't place files on recent list if running in plugin mode
    Implement chapter seeking and detection in mkv files, depends on patch submitted to mplayer
        Patch: http://lists.mplayerhq.hu/pipermail/mplayer-dev-eng/2008-September/058567.html
    Add recently opened files to the File Menu under Open Recent
    When running in replace and play mode, replace on first song on playlist and add others
    Add command line option, --replace_and_play that switches single instance mode into single item mode
    Updated Turkish translation
    Keep blank items from appearing in Subtitle and Audio language menus
    Add new menu Edit->Select Audio Language, should work on DVD and mkv files
    Add new menu Edit->Select Subtitle Language, this menu is populated with data from the mkv files for subtitle selection
    New preference in the GUI to set the default startup volume
    Only allow view angle menu item when video is present
    Fix bug, where audio file was being parsed as a playlist when running in single instance mode