@@ -1,4 +1,5 @@
 Development
+    Make recent documents menu only show the items gnome-mplayer can open
     Enable Copy URL menu, since we are in string freeze, I will not update this text until next release
     Add missing schema key
     Updated ko, fr and tr translations
